# OS2fleetoptimiser

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DockerVPN  Dockerfile  GOVERNANCE.md  Publiccode-yml.md  README.md  README_da.md  SECURITY.md  VERSIONING.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  redis-rabbit-docker-compose.yaml
.github/workflows/: automated-vulnerability-scan.yml  backend-push.yaml  backend-test.yaml  frontend-build.yaml  frontend-push.yaml  testing.yaml
fleetmanager/: __init__.py  database_creation.py  dummy_data.sql
fleetmanager/api/: __init__.py  dependencies.py
fleetmanager/configuration/: util.py
fleetmanager/data_access/: __init__.py  db_engine.py  dbschema.py
fleetmanager/extractors/: util.py
fleetmanager/fleet_simulation/: util.py
fleetmanager/goal_simulation/: util.py
fleetmanager/location/: util.py
fleetmanager/model/: dashfree_utils.py  exceptions.py  genetic.py  model.py  roundtripaggregator.py  tabu.py  tco_calculator.py  trip_generator.py  vehicle.py  vehicle_optimisation.py
fleetmanager/simulation_setup/: util.py
fleetmanager/statistics/: __init__.py  util.py
fleetmanager/tasks/: __init__.py  celery.py
fleetmanager/tests/: conftest.py
fleetoptimiser-frontend/: Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  theme.ts  tsconfig.json
fleetoptimiser-frontend/app/: authOptions.ts  env.ts  globals.css  layout.tsx
fleetoptimiser-frontend/components/: AddFilter.tsx  ApiError.tsx  AxiosBase.ts  BikeSettingsForm.tsx  (+7 more)
(+182 files in other folders)
