[tool.poetry]
name = "fleetmanager"
version = "1.0.0"
description = ""
authors = ["Droids Agency <support@droidsagency.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.1"
deap = "1.4.1"
SQLAlchemy = "2.0.15"
celery = {extras = ["redis"], version = "^5.2.7"}
fastapi = "^0.109.1"
mysqlclient = "^2.1.1"
uvicorn = "^0.21.1"
geoalchemy2 = "^0.14.1"
shapely = "^2.0.1"
numpy-financial = "^1.0.0"
ortools = "^9.6.2534"
scikit-learn = "^1.2.2"
websockets = "^10.4"
requests = "^2.28.2"
pymysql = "^1.1.0"
psycopg2 = "^2.9.7"
pyppeteer = "^1.0.2"
regex = "^2022.10.31"
xmlsec = "1.3.13"
xmltodict = "0.12.0"
xlsxwriter = "3.0.3"
pymssql = "2.2.7"
pyodbc = "4.0.32"
pydantic = "^1.10.12"
python-multipart = "0.0.18"
pytest = "^7.4.0"
pytest-cov = "4.1.0"
urllib3 = "<=2.0"
openpyxl = "^3.1.2"
openpyn = "^3.0.0"
tenacity = "^8.2.3"
httpx = "^0.25.2"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
rope = "^1.7.0"
ipdb = "^0.13.13"
pynvim = "^0.4.3"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "*/updatedb.py",
    "*/soap_agent.py",
    "*/database_creation.py"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.isort]
profile = "black"
src_paths = ["fleetmanager"]
